# notebook

./: Dockerfile  railway.json  railway.toml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/notebook/: config.py  verify.py
backend/notebook/cross_ref/: __init__.py  __main__.py
backend/notebook/server/: __init__.py  api.py  editor.html
backend/notebook/storage/: __init__.py  postgres_storage.py  sqlite_storage.py
backend/notebook/teach/: __init__.py  generator.py
backend/tests/fixtures/: error_mitigation.md  qec_paper.md
